--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,16 +22,16 @@ jobs:
       - name: Build and push backend image
         uses: docker/build-push-action@v6
         with:
-          context: ./backend
-          file: ./backend/Dockerfile
+          context: ./crud-dd-task-mean-app/backend
+          file: ./crud-dd-task-mean-app/backend/Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/crud-mean-backend:latest
 
       - name: Build and push frontend image
         uses: docker/build-push-action@v6
         with:
-          context: ./frontend
-          file: ./frontend/Dockerfile
+          context: ./crud-dd-task-mean-app/frontend
+          file: ./crud-dd-task-mean-app/frontend/Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/crud-mean-frontend:latest
 
